Fix overflow sizing

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     width: 100%;
     display: grid;
     grid-template-rows: 1fr 5fr 1fr;
-    overflow: scroll;
+    overflow-x: hidden;
 }
 
 #titlebar {
@@ -40,7 +40,8 @@ body {
     grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
     gap: 25px;
     padding: 25px;
-    overflow: visible;
+    grid-auto-columns: repeat(auto-fit, minmax(100px, 1fr));
+    grid-auto-rows: repeat(auto-fit, minmax(100px, 1fr));
 }
 
 .sample {
